@@ -17,8 +17,10 @@ partitioner (0.14) UNRELEASED; urgency=low
   * Steinar H. Gunderson
     - Updated Norwegian translation (nb.po).
   * Otavio Salvador
-    - Change priority of question about disc to 'critical'.
+    - Change priority of question about disc to 'critical'. 
+      Closes: #220258
     - Fix a trivial spell error in pt_BR translation.
+    - Fixed to not call the partitioner tool without a disk select.
 
  -- Bart Cornelis <cobaco@linux.be>  Fri, 19 Dec 2003 17:28:04 +0100
 
